# vis-doom

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
agents/: basic.py
agents/wrappers/: frameskipwrapper.py  resizewrapper.py  screenwrapper.py
examples/: gymnasium_wrapper.py
logs/basic/: evaluations.npz
logs/basic/best_model/: events.out.tfevents.1763919083.CRANBERRY.19628.0  events.out.tfevents.1764005737.CRANBERRY.3340.0
models/basic/: basic.cfg  basic.toml  evaluations.npz  events.out.tfevents
models/deadly_corridor/: deadly_corridor.cfg  deadly_corridor.toml  events.out.tfevents
models/defend_the_centre/: defend_the_centre.cfg  defend_the_centre.toml  evaluations.npz  events.out.tfevents
scenarios/: basic.cfg  deadly_corridor.cfg  deathmatch.cfg  defend_the_center.cfg
src/visdoom/: __init__.py  agent.py  cli.py  constants.py
src/visdoom/agents/: basic.py  deadly_corridor.py  defend_the_centre.py
src/visdoom/config/: config.py
src/visdoom/wrappers/: __init__.py  frame_skip_wrapper.py  grayscale_wrapper.py  resize_wrapper.py  screen_wrapper.py
